style: update physical properties to not use logical props

--- a/docs/lib/sage-frontend/stylesheets/docs/_example.scss
+++ b/docs/lib/sage-frontend/stylesheets/docs/_example.scss
@@ -80,8 +80,8 @@ $-example-code-preview-button-bg: rgba(sage-color(primary, 300), 0.75);
   @include sage-button-style-reset();
   position: absolute;
   z-index: sage-z_index(raised);
-  inset-block-end: sage-spacing(xs);
-  inset-inline-start: 0;
+  bottom: sage-spacing(xs);
+  left: 0;
   width: 100%;
   padding: sage-spacing(xs);
   color: $-example-code-preview-button-color;
@@ -140,9 +140,9 @@ $-example-code-preview-button-bg: rgba(sage-color(primary, 300), 0.75);
     display: block;
     z-index: sage-z-index(default, 100);
     position: absolute;
-    inset-inline-start: 0;
-    inset-inline-end: 0;
-    inset-block-end: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
     height: 100%;
     background-image: linear-gradient(to bottom, rgba($docs-code-editor-background, 0) 0%, rgba($docs-code-editor-background, 0.9) 100%);
     transition: map-get($sage-transitions, default);
