--- a/packages/sage-assets/lib/stylesheets/components/_progress_bar.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_progress_bar.scss
@@ -20,7 +20,7 @@ $-progress-bar-height: sage-spacing(xs);
 
   .sage-modal__header & {
     position: absolute;
-    inset-block-end: 0;
+    bottom: 0;
     width: 100%;
   }
 }
