--- a/packages/sage-assets/lib/stylesheets/components/_card_highlight.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_card_highlight.scss
@@ -16,38 +16,38 @@ $-card-highlight-size: rem(12px);
 
 .sage-card-highlight--right,
 .sage-card-highlight--left {
-  inset-block-start: 0;
-  inset-block-end: 0;
+  top: 0;
+  bottom: 0;
   width: $-card-highlight-size;
 }
 
 .sage-card-highlight--right {
-  inset-inline-end: 0;
+  right: 0;
   border-start-end-radius: $-card-highlight-border-radius;
   border-end-end-radius: $-card-highlight-border-radius;
 }
 
 .sage-card-highlight--left {
-  inset-inline-start: 0;
+  left: 0;
   border-start-start-radius: $-card-highlight-border-radius;
   border-end-start-radius: $-card-highlight-border-radius;
 }
 
 .sage-card-highlight--top,
 .sage-card-highlight--bottom {
-  inset-inline-end: 0;
-  inset-inline-start: 0;
+  right: 0;
+  left: 0;
   height: $-card-highlight-size;
 }
 
 .sage-card-highlight--top {
-  inset-block-start: 0;
+  top: 0;
   border-start-start-radius: $-card-highlight-border-radius;
   border-start-end-radius: $-card-highlight-border-radius;
 }
 
 .sage-card-highlight--bottom {
-  inset-block-end: 0;
+  bottom: 0;
   border-end-start-radius: $-card-highlight-border-radius;
   border-end-end-radius: $-card-highlight-border-radius;
 }
