--- a/packages/sage-assets/lib/stylesheets/components/_panel_figure.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_panel_figure.scss
@@ -36,8 +36,8 @@ $-panel-figure-default-background-color: sage-color(grey, 150);
 
   img {
     position: absolute;
-    inset-block-start: 50%;
-    inset-inline-start: 50%;
+    top: 50%;
+    left: 50%;
     transform: translate(-50%, -50%);
     height: 100%;
   }
@@ -53,7 +53,7 @@ $-panel-figure-default-background-color: sage-color(grey, 150);
 
   &.sage-panel__figure--aspect-ratio {
     img {
-      inset-block-start: calc(50% + (#{$-panel-figure-padding} / 2));
+      top: calc(50% + (#{$-panel-figure-padding} / 2));
     }
   }
 }
