--- a/packages/sage-assets/lib/stylesheets/components/_popover.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_popover.scss
@@ -64,8 +64,8 @@ $-popover-tooltip-inactive: $-popover-tooltip-width solid transparent;
   }
 
   .sage-popover--top & {
-    inset-block-end: calc(100% + #{$-popover-panel-offset});
-    inset-inline-start: 0;
+    bottom: calc(100% + #{$-popover-panel-offset});
+    left: 0;
 
     &::after {
       left: $-popover-tooltip-offset;
@@ -78,8 +78,8 @@ $-popover-tooltip-inactive: $-popover-tooltip-width solid transparent;
   }
 
   .sage-popover--top-right & {
-    inset-block-end: calc(100% + #{$-popover-panel-offset});
-    inset-inline-end: 0;
+    bottom: calc(100% + #{$-popover-panel-offset});
+    right: 0;
 
     &::after {
       right: $-popover-tooltip-offset;
@@ -92,8 +92,8 @@ $-popover-tooltip-inactive: $-popover-tooltip-width solid transparent;
   }
 
   .sage-popover--right & {
-    inset-block-start: $-popover-tooltip-horizontal-offset;
-    inset-inline-start: calc(100% + #{$-popover-panel-offset} + #{$-popover-tooltip-width});
+    top: $-popover-tooltip-horizontal-offset;
+    left: calc(100% + #{$-popover-panel-offset} + #{$-popover-tooltip-width});
 
     &::after {
       left: -($-popover-tooltip-width);
@@ -106,8 +106,8 @@ $-popover-tooltip-inactive: $-popover-tooltip-width solid transparent;
   }
 
   .sage-popover--bottom & {
-    inset-block-start: calc(100% + #{$-popover-panel-offset});
-    inset-inline-start: 0;
+    top: calc(100% + #{$-popover-panel-offset});
+    left: 0;
 
     &::after {
       left: $-popover-tooltip-offset;
@@ -134,8 +134,8 @@ $-popover-tooltip-inactive: $-popover-tooltip-width solid transparent;
   }
 
   .sage-popover--left & {
-    inset-block-start: $-popover-tooltip-horizontal-offset;
-    inset-inline-end: calc(100% + #{$-popover-panel-offset} + #{$-popover-tooltip-width});
+    top: $-popover-tooltip-horizontal-offset;
+    right: calc(100% + #{$-popover-panel-offset} + #{$-popover-tooltip-width});
 
     &::after {
       right: -($-popover-tooltip-width);
