--- a/packages/sage-assets/lib/stylesheets/components/_sortable.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_sortable.scss
@@ -91,7 +91,7 @@ $-sortable-image-height: rem(48px);
   img {
     position: absolute;
     transform: translateY(-50%);
-    inset-block-start: 50%;
+    top: 50%;
     width: 100%;
   }
 }
