--- a/packages/sage-assets/lib/stylesheets/components/_topbar.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_topbar.scss
@@ -10,8 +10,8 @@
   align-items: center;
   position: fixed;
   z-index: sage-z-index(nav);
-  inset-block-start: 0;
-  inset-inline-start: sage-sidebar();
+  top: 0;
+  left: sage-sidebar();
   height: rem(88px);
   width: calc(100% - #{sage-sidebar()});
   padding: sage-spacing(md) sage-spacing(xl);
@@ -27,7 +27,7 @@
 
 @media (max-width: sage-breakpoint(md-max)) {
   .sage-topbar {
-    inset-inline-start: 0;
+    left: 0;
     width: 100%;
   }
 
