--- a/packages/sage-assets/lib/stylesheets/global/_reboot.scss
+++ b/packages/sage-assets/lib/stylesheets/global/_reboot.scss
@@ -150,11 +150,11 @@ sup {
 }
 
 sub {
-  inset-block-end: -0.25em;
+  bottom: -0.25em;
 }
 
 sup {
-  inset-block-start: -0.5em;
+  top: -0.5em;
 }
 
 a {
