Revert "style: update physical properties to not use logical props"
This reverts commit 18d20e06a8a774560364b2c50c231669c42034fa.

--- a/docs/lib/sage-frontend/stylesheets/docs/_quick_links.scss
+++ b/docs/lib/sage-frontend/stylesheets/docs/_quick_links.scss
@@ -10,7 +10,7 @@ $-quick-links-color-background: sage-color(primary, 200);
 
 .quick-links {
   position: sticky;
-  top: 0;
+  inset-block-start: 0;
   overflow: hidden;
   padding: sage-spacing(2xs) sage-spacing();
   background-color: #fff;
