--- a/packages/sage-assets/lib/stylesheets/components/_table.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_table.scss
@@ -254,8 +254,8 @@ $-table-avatar-width: rem(32px);
     content: "";
     display: block;
     position: absolute;
-    top: 0;
-    right: 0;
+    inset-block-start: 0;
+    inset-inline-end: 0;
     z-index: sage-z-index(default, 1);
     height: 100%;
     width: $-table-overflow-indicator-width;
