--- a/packages/sage-assets/lib/stylesheets/components/_toast.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_toast.scss
@@ -42,8 +42,8 @@ $-toast-bottom-spacing: sage-spacing(xs);
 .sage-toast-container {
   display: flex;
   position: fixed;
-  right: 0;
-  bottom: 0;
+  inset-inline-end: 0;
+  inset-block-end: 0;
   flex-direction: column;
   align-items: flex-end;
   z-index: sage-z-index(priority);
