--- a/docs/lib/sage-frontend/stylesheets/docs/_home.scss
+++ b/docs/lib/sage-frontend/stylesheets/docs/_home.scss
@@ -32,8 +32,8 @@
 
 .docs-hero__background {
   position: absolute;
-  left: 0;
-  top: 0;
+  inset-inline-start: 0;
+  inset-block-start: 0;
   width: 100%;
   height: 100%;
   object-fit: cover;
@@ -90,8 +90,8 @@
     content: "";
     position: absolute;
     z-index: sage-z-index(default, 1);
-    top: 0;
-    left: 0;
+    inset-block-start: 0;
+    inset-inline-start: 0;
     height: 100%;
     width: 100%;
     backdrop-filter: blur(70px);
