--- a/packages/sage-assets/lib/stylesheets/components/_banner.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_banner.scss
@@ -42,8 +42,8 @@ $-banner-el-icon: "before";
   align-items: center;
   justify-content: center;
   position: fixed;
-  left: 0;
-  top: 0;
+  inset-inline-start: 0;
+  inset-block-start: 0;
   z-index: sage-z-index(negative);
   transform: translateY(-100px);
   width: 100%;
