--- a/packages/sage-assets/lib/stylesheets/components/_catalog_item.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_catalog_item.scss
@@ -101,7 +101,7 @@ $-catalogue-item-image-height-mobile: rem(120px);
   img {
     position: absolute;
     transform: translateY(-50%);
-    top: 50%;
+    inset-block-start: 50%;
     width: 100%;
   }
 }
