--- a/packages/sage-assets/lib/stylesheets/components/_badge.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_badge.scss
@@ -11,7 +11,6 @@ $-badge-interactive-icon-size-decor: rem(28px);
 $-badge-padding: sage-spacing(3xs) rem(10px) sage-spacing(3xs) sage-spacing(xs);
 $-badge-padding-lg: sage-spacing(2xs) rem(12px);
 $-badge-border-radius: sage-border(radius-x-large);
-$-badge-inset-border: 0 0 0 1px inset;
 $-badge-statuses: (
   danger,
   draft,
@@ -26,14 +25,22 @@ $-badge-statuses: (
   align-items: center;
   position: relative;
   border-radius: $-badge-border-radius;
+  border-width: 1px;
+  border-style: solid;
 
   &[class*="sage-badge--icon-only"] {
     background-color: transparent;
   }
+
+  &:not(.sage-badge--large) {
+    .sage-badge__value-text {
+      letter-spacing: sage-letter-spacing(md);  
+    }
+  }
 }
 
 .sage-badge__value {
-  @extend %t-sage-body-small-med;
+  @extend %t-sage-body-med;
 
   appearance: none;
   display: flex;
@@ -41,7 +48,6 @@ $-badge-statuses: (
   max-width: 100%;
   min-height: $-badge-min-height;
   padding: $-badge-padding;
-  color: sage-color(grey, 950);
   white-space: nowrap;
   background-color: transparent;
   border-radius: $-badge-border-radius;
@@ -61,6 +67,12 @@ $-badge-statuses: (
   .sage-badge--large & {
     @extend %t-sage-body-med;
     padding: $-badge-padding-lg;
+    font-family: $-heading-font;
+
+    .sage-badge__value-text { 
+      font-size: sage-font-size(lg, false);
+      letter-spacing: sage-letter-spacing(sm);
+    }
   }
 }
 
@@ -85,10 +97,8 @@ $-badge-statuses: (
 
   #{$-color-modifier} {
     background-color: sage-color-combo($-color-name, default, background);
-
-    &:hover:not(:focus):not(:active):not(:disabled):not(.disabled) {
-      color: sage-color-combo($-color-name, default, background-accent);
-    }
+    border-color: sage-color-combo($-color-name, default, background-accent);
+    color: sage-color-combo($-color-name, default, foreground-accent);
   }
 
   #{$-color-modifier} .sage-dot {
