--- a/packages/sage-assets/lib/stylesheets/dictionary/_tokens.scss
+++ b/packages/sage-assets/lib/stylesheets/dictionary/_tokens.scss
@@ -60,7 +60,7 @@ $sd-sage-color-base-blue-200-classname: "t-sage--color-blue-200";
 ///
 /// color color-base-blue-300-hex
 ///
-$sd-sage-color-base-blue-300-hex: #92c5fd;
+$sd-sage-color-base-blue-300-hex: #93c5fd;
 ///
 /// color color-base-blue-300-code
 ///
@@ -468,7 +468,7 @@ $sd-sage-color-base-primary-100-classname: "t-sage--color-primary-100";
 ///
 /// color color-base-primary-200-hex
 ///
-$sd-sage-color-base-primary-200-hex: #92c5fd;
+$sd-sage-color-base-primary-200-hex: #93c5fd;
 ///
 /// color color-base-primary-200-code
 ///
@@ -2028,7 +2028,7 @@ $sd-sage-color-combos-draft-default-foreground-accent: #1a1a19;
 ///
 /// color combos color-combos-draft-default-background
 ///
-$sd-sage-color-combos-draft-default-background: #e4e4e4;
+$sd-sage-color-combos-draft-default-background: #f0f0f0;
 ///
 /// color combos color-combos-draft-default-background-accent
 ///
@@ -2112,7 +2112,7 @@ $sd-sage-color-combos-info-default-background: #dbe9fe;
 ///
 /// color combos color-combos-info-default-background-accent
 ///
-$sd-sage-color-combos-info-default-background-accent: #92c5fd;
+$sd-sage-color-combos-info-default-background-accent: #93c5fd;
 ///
 /// color combos color-combos-info-default-icon-background-accent
 ///
@@ -2128,7 +2128,7 @@ $sd-sage-color-combos-info-subtle-foreground-accent: #2463eb;
 ///
 /// color combos color-combos-info-subtle-background
 ///
-$sd-sage-color-combos-info-subtle-background: #92c5fd;
+$sd-sage-color-combos-info-subtle-background: #93c5fd;
 ///
 /// color combos color-combos-info-bold-foreground
 ///
@@ -2268,7 +2268,7 @@ $sd-sage-color-combos-primary-default-foreground-accent: #fff;
 ///
 /// color combos color-combos-primary-default-background
 ///
-$sd-sage-color-combos-primary-default-background: #92c5fd;
+$sd-sage-color-combos-primary-default-background: #93c5fd;
 ///
 /// color combos color-combos-primary-subtle-foreground
 ///
@@ -2280,7 +2280,7 @@ $sd-sage-color-combos-primary-subtle-foreground-accent: #fff;
 ///
 /// color combos color-combos-primary-subtle-background
 ///
-$sd-sage-color-combos-primary-subtle-background: #92c5fd;
+$sd-sage-color-combos-primary-subtle-background: #93c5fd;
 ///
 /// color combos color-combos-primary-bold-foreground
 ///
@@ -2288,7 +2288,7 @@ $sd-sage-color-combos-primary-bold-foreground: #fff;
 ///
 /// color combos color-combos-primary-bold-background
 ///
-$sd-sage-color-combos-primary-bold-background: #92c5fd;
+$sd-sage-color-combos-primary-bold-background: #93c5fd;
 
 ///
 /// Map for color combos
