style: adjust padding on bulk actions

--- a/packages/sage-assets/lib/stylesheets/components/_checkbox.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_checkbox.scss
@@ -125,7 +125,7 @@ $-checkbox-focus-outline-color: sage-color(purple, 300);
 
   .sage-panel-controls__bulk-actions--checked & {
     display: unset;
-    padding-block-end: sage-spacing(sm);
+    padding-inline-end: sage-spacing(sm);
   }
 }
 
