style(empty state): add text wrap balance to empty state text

--- a/docs/app/views/examples/components/empty_state/_preview.html.erb
+++ b/docs/app/views/examples/components/empty_state/_preview.html.erb
@@ -2,7 +2,7 @@
 <%= sage_component SageEmptyState, {
   icon: "trash",
   title: "Title for state",
-  text: "Text to appear below. Lorem ipsum dolor sit amet consectituor."
+  text: "Text to appear below. Lorem ipsum dolor sit amet consectituor. Lorem ipsum dolor sit amet consectituor.",
 } do %>
   <p>Other stuff such as buttons...</p>
 <% end %>
@@ -12,7 +12,7 @@
 <%= sage_component SageEmptyState, {
   icon: "bold",
   title: "Title for state, compact variety",
-  text: "Text to appear below. Lorem ipsum dolor sit amet consectituor.",
+  text: "Text to appear below. Lorem ipsum dolor sit amet consectituor. Lorem ipsum dolor sit amet consectituor. Lorem ipsum dolor sit amet consectituor.",
   size: "compact",
 } do %>
   <p>Other stuff such as buttons...</p>
@@ -22,7 +22,7 @@
 <%= sage_component SageEmptyState, {
   graphic: image_tag("card-placeholder-lg.png", alt: ""),
   title: "Title for state, with graphic instead of icon",
-  text: "Text to appear below. Lorem ipsum dolor sit amet consectituor.",
+  text: "Text to appear below. Lorem ipsum dolor sit amet consectituor. Lorem ipsum dolor sit amet consectituor. Lorem ipsum dolor sit amet consectituor.",
 } do %>
   <p>Other stuff such as buttons...</p>
 <% end %>
