docs(badge): minor adjustments to grammar

--- a/docs/app/views/examples/components/badge/_preview.html.erb
+++ b/docs/app/views/examples/components/badge/_preview.html.erb
@@ -15,7 +15,7 @@
 <%= sage_component SageDivider, {} %>
 
 <h3>Dot</h3>
-<p>Illustrates a badge with an indicator dot.</p>
+<p>Demostrates a badge with an indicator dot.</p>
 
 <%= sage_component SageLabelGroup, { gap: :md, spacer: { bottom: :sm }} do %>
   <%= sage_component SageBadge, { color: "draft", value: "Neutral" } do %>
@@ -53,7 +53,7 @@
 <%= sage_component SageDivider, {} %>
 
 <h3>Interactive Badge</h3>
-<p>Shows how to create an interactive badge with dropdown functionality.</p>
+<p>Demonstrates an interactive badge with dropdown functionality.</p>
 
 <%= sage_component SageLabelGroup, { gap: :md, spacer: { bottom: :sm }} do %>
   <%= sage_component SageBadge, { color: "draft", value: "Neutral", interactive_type: :dropdown } %>
