style(dot): adjust sage-badge dot spacing to align with designs

--- a/packages/sage-assets/lib/stylesheets/components/_dot.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_dot.scss
@@ -31,7 +31,7 @@ $-sage-dot-size--badge: rem(6px);
   }
 
   .sage-badge & {
-    margin-inline-start: rem(6px);
+    margin-inline-start: sage-spacing(xs);
   }
 
   .sage-badge--large & {
