docs: update broken image paths

--- a/docs/app/views/examples/components/media_tile/_preview.html.erb
+++ b/docs/app/views/examples/components/media_tile/_preview.html.erb
@@ -32,7 +32,7 @@ panels = [
     caption: %(
       <p>Vivamus dictum rutrum dui, nec placerat ante</p>
     ),
-    media: %(<img src="/assets/card-placeholder-lg.png" alt="Image of Product Abra" />),
+    media: %(#{image_tag("card-placeholder-lg.png", alt: "media tile image placeholder")}),
     title: "Product Abra",
   },
   {
@@ -44,7 +44,7 @@ panels = [
     caption: %(
       <p>Suspendisse eu tellus quis arcu sagittis semper</p>
     ),
-    media: %(<img src="/assets/card-placeholder-lg.png" alt="Image of Product Cadabra" />),
+    media: %(#{image_tag("card-placeholder-lg.png", alt: "media tile image placeholder")}),
     title: "Product Cadabra",
   },
   {
@@ -56,7 +56,7 @@ panels = [
     caption: %(
       <p>Maecenas vitae leo eu tellus efficitur viverra sit amet ut tortor vestibulum</p>
     ),
-    media: %(<img src="/assets/card-placeholder-lg.png" alt="Image of Product Jimminycricket" />),
+    media: %(#{image_tag("card-placeholder-lg.png", alt: "media tile image placeholder")}),
     title: "Product Jimminycricket",
   },
 ]
